improved focused elements outlines and overall style consistency, scss cleanup

--- a/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
@@ -11,7 +11,7 @@
     .breadcrumb-item {
         display: inline-block;
         color: var(--breadcrumb-color);
-        transition: 0.4s;
+        transition: color .4s;
         text-decoration: underline;
         font: inherit;
 
