--- a/react/assets/forus-webshop/scss/_common/includes/common.scss
+++ b/react/assets/forus-webshop/scss/_common/includes/common.scss
@@ -1,14 +1,9 @@
-*:focus *:focus-visible {
-    outline-width: var(--outline-width);
-    outline-offset: var(--outline-offset);
-}
-
-:focus {
-    outline: -webkit-focus-ring-color auto 1px;
-}
-
+:focus,
 :focus-visible {
-    outline: -webkit-focus-ring-color auto 1px;
+    outline: var(--focus-outline) !important;
+    outline-offset: var(--focus-outline-offset) !important;
+    box-shadow: var(--focus-box-shadow) !important;
+    z-index: 1;
 }
 
 img {
@@ -122,7 +117,7 @@ img {
 }
 
 .text-danger {
-    color: #AD0003 !important;
+    color: #ad0003 !important;
 }
 
 .text-success {
@@ -174,7 +169,7 @@ img {
     filter: grayscale(1);
     user-select: none;
     pointer-events: none;
-    opacity: .75;
+    opacity: 0.75;
 }
 
 img {
@@ -494,7 +489,6 @@ img {
 }
 
 @media (min-width: 768px) {
-
     .col.col-sm-1,
     .col.col-sm-2,
     .col.col-sm-3,
@@ -716,7 +710,6 @@ img {
 }
 
 @media (min-width: 992px) {
-
     .col.col-md-1,
     .col.col-md-2,
     .col.col-md-3,
@@ -938,7 +931,6 @@ img {
 }
 
 @media (min-width: 1200px) {
-
     .col.col-lg-1,
     .col.col-lg-2,
     .col.col-lg-3,
@@ -1167,7 +1159,7 @@ img {
 .container-fluid:after,
 .row:before,
 .row:after {
-    content: " ";
+    content: ' ';
     display: table;
 }
 
