--- a/react/assets/forus-webshop/scss/_common/includes/shame.scss
+++ b/react/assets/forus-webshop/scss/_common/includes/shame.scss
@@ -94,6 +94,11 @@ body {
         content: ")";
     }
 }
+.section-title {
+    a {
+        font: inherit !important;
+    }
+}
 
 @media screen and (min-width: 1024px) {
     .section-profile {
