--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-empty.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-empty.scss
@@ -56,7 +56,7 @@
             font-size: 1.3em;
             float: right;
             margin-left: 5px;
-            transition: 0.4s;
+            transition: color .4s;
             line-height: 22px;
             float: right;
         }
