--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-pre-check.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-pre-check.scss
@@ -98,11 +98,7 @@
                     padding-bottom: 0;
 
                     .pre-check-progress-step-icon {
-                        @if ($buildReact) {
-                            background: url('./assets/img/icon-pre-check-totals-inactive.svg') center no-repeat;
-                        } @else {
-                            background: url('../img/icon-pre-check-totals-inactive.svg') center no-repeat;
-                        }
+                        background: url('./assets/img/icon-pre-check-totals-inactive.svg') center no-repeat;
                     }
 
                     &:before {
@@ -111,13 +107,8 @@
 
                     &.active {
                         .pre-check-progress-step-icon {
-                            @if ($buildReact) {
-                                background: url('./assets/img/icon-pre-check-totals-active.svg') center no-repeat;
-                            } @else {
-                                background: url('../img/icon-pre-check-totals-active.svg') center no-repeat;
-                            }
                             color: #fff;
-                            background-color: var(--color-primary);
+                            background: var(--color-primary) url('./assets/img/icon-pre-check-totals-active.svg') no-repeat center;
                         }
                     }
                 }
