--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-requests.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-requests.scss
@@ -9,7 +9,7 @@
         margin-bottom: 15px;
         box-shadow: var(--box-shadow);
         position: relative;
-        transition: 0.4s;
+        transition: color .4s, background-color .4s;
         min-height: 135px;
         cursor: default;
 
