--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-products-list.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-products-list.scss
@@ -16,7 +16,7 @@
         display: flex;
         position: relative;
         flex-direction: row;
-        transition: box-shadow 0.4s;
+        transition: box-shadow .4s;
 
         .product-photo {
             flex: 0 0 105px;
