--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-products.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-products.scss
@@ -22,7 +22,7 @@
         border-radius: var(--showcase-item-border-radius);
         box-shadow: var(--showcase-item-shadow);
         border: var(--showcase-item-border);
-        transition: box-shadow 0.4s;
+        transition: box-shadow .4s;
         overflow: hidden;
 
         .block-bookmark-toggle {
