--- a/react/assets/forus-webshop/scss/_common/components/table.scss
+++ b/react/assets/forus-webshop/scss/_common/components/table.scss
@@ -72,7 +72,7 @@ table.table {
 
             .td-icon {
                 color: var(--color-primary);
-                transition: 0.4s;
+                transition: color .4s;
                 font-size: 20px;
 
                 &:hover {
