--- a/react/assets/forus-webshop/scss/_common/includes/third-party.scss
+++ b/react/assets/forus-webshop/scss/_common/includes/third-party.scss
@@ -1,25 +1,4 @@
 /*==========  Style Sheet - Third-party  ==========*/
-.nano {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.nano > .nano-content {
-    position: absolute;
-    overflow: scroll;
-    overflow-x: hidden;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
-.nano > .nano-content:focus {
-    outline: thin dotted;
-}
-
 .react-datepicker-wrapper {
     width: 100%;
 }
@@ -93,7 +72,7 @@
     cursor: pointer;
     background-color: transparent;
     opacity: 0.5;
-    transition: all 0.4s;
+    transition: all .4s;
 }
 
 .nano > .nano-pane > .nano-slider {
@@ -450,7 +429,7 @@
                 line-height: 35px;
                 position: relative;
                 z-index: 1;
-                transition: color 0.4s;
+                transition: color .4s;
 
                 &:before {
                     content: '';
@@ -464,7 +443,7 @@
                     transform: translate(-50%, -50%);
                     z-index: -1;
                     border-radius: 20px;
-                    transition: background 0.4s;
+                    transition: background .4s;
                 }
 
                 &:hover {
