--- a/react/assets/forus-webshop/scss/_common/layout/_navigation.scss
+++ b/react/assets/forus-webshop/scss/_common/layout/_navigation.scss
@@ -13,7 +13,7 @@
             }
 
             .mdi-cog:before {
-                content: "\F493";
+                content: '\F493';
                 font-size: 26px;
                 color: #017f96;
                 margin: 0 auto;
@@ -118,7 +118,9 @@
                     display: block;
                     padding: 5px 15px;
                     font: 700 13px/20px var(--base-font);
-                    transition: 0.4s;
+                    transition:
+                        background 0.4s,
+                        color 0.4s;
                     width: 100%;
                     text-align: left;
                     cursor: default;
@@ -131,7 +133,9 @@
                 .auth-user-menu-item {
                     display: block;
                     padding: 8px 15px;
-                    transition: 0.4s;
+                    transition:
+                        background 0.4s,
+                        color 0.4s;
                     cursor: pointer;
                     border: none;
                     width: 100%;
@@ -264,7 +268,7 @@
                     color: var(--tc-nav);
 
                     &.active {
-                        color: #157C68;
+                        color: #157c68;
                     }
                 }
 
@@ -286,15 +290,11 @@
                         background: var(--btn-start-bg);
 
                         &:after {
-                            content: "";
+                            content: '';
                             width: 50px;
                             height: 50px;
                             border-radius: 4px;
-                            @if ($buildReact) {
-                                background: url(./assets/img/identity-avatar.svg) 7px 7px no-repeat;
-                            } @else {
-                                background: url(../img/identity-avatar.svg) 7px 7px no-repeat;
-                            }
+                            background: url(./assets/img/identity-avatar.svg) 7px 7px no-repeat;
                             display: inline-block;
                         }
 
@@ -319,11 +319,18 @@
             @include cf();
 
             &.button {
-                font: 400 16px/1.5em Arial, Helvetica, sans-serif;
+                font:
+                    400 16px/1.5em Arial,
+                    Helvetica,
+                    sans-serif;
                 color: #646f79;
                 cursor: pointer;
                 border: 1px solid transparent;
-                transition: color 0.4s, background 0.4s, box-shadow 0.4s, border 0.4s;
+                transition:
+                    color 0.4s,
+                    background 0.4s,
+                    box-shadow 0.4s,
+                    border 0.4s;
                 border-radius: 6px;
                 display: inline-block;
                 text-align: center;
@@ -366,21 +373,25 @@
                 .navbar-item {
                     color: var(--tc-nav);
                     display: inline-block;
-                    padding: 15px 0px;
+                    padding: 15px 0;
                     position: relative;
-                    transition: 0.4s;
+                    transition:
+                        color 0.4s,
+                        background-color 0.4s;
                     font: 400 18px/1.3em var(--base-font);
                     cursor: pointer;
 
                     &:before {
-                        content: "";
+                        content: '';
                         top: var(--nav-line-top);
                         bottom: var(--nav-line-bottom);
                         height: 3px;
                         display: block;
                         position: absolute;
                         background: transparent;
-                        transition: 0.4s;
+                        transition:
+                            color 0.4s,
+                            background-color 0.4s;
                         width: 100%;
                     }
 
@@ -423,7 +434,9 @@
                         display: block;
                         padding: 5px 15px;
                         font: 700 13px/26px var(--base-font);
-                        transition: 0.4s;
+                        transition:
+                            color 0.4s,
+                            background-color 0.4s;
                         cursor: pointer;
 
                         img {
@@ -458,7 +471,7 @@
                 }
 
                 &:after {
-                    content: " ";
+                    content: ' ';
                     position: absolute;
                     top: 50%;
                     right: 25px;
@@ -467,7 +480,7 @@
                     height: 14px;
                     background-color: var(--tc-nav);
                     transform: translate(50%, -50%);
-                    opacity: .25;
+                    opacity: 0.25;
                     display: block;
                 }
 
@@ -496,37 +509,37 @@
                     padding-right: 0;
                     float: right;
                     display: flex;
-                    flex-direction: row; 
+                    flex-direction: row;
                     align-items: center;
 
                     .navbar-user {
                         font-weight: 600;
                         font-size: 16px;
                         color: var(--tc-nav);
-                        display: flex; 
+                        display: flex;
                         margin-right: 20px;
                         position: relative;
                         align-items: center;
-                        
+
                         &:hover {
                             text-decoration: none;
                         }
 
                         &:after {
-                            content: " ";
+                            content: ' ';
                             position: absolute;
                             top: 50%;
                             right: -10px;
                             bottom: 0;
                             width: 1px;
                             height: 14px;
-                            background-color: #282B39;
+                            background-color: #282b39;
                             transform: translate(50%, -50%);
-                            opacity: .25;
+                            opacity: 0.25;
                             display: block;
                         }
                     }
-                    
+
                     em {
                         margin-left: 5px;
 
@@ -756,7 +769,8 @@
                 border-radius: 0;
                 justify-content: flex-start;
 
-                .navbar-search-button, .navbar-menu-button {
+                .navbar-search-button,
+                .navbar-menu-button {
                     box-shadow: none !important;
 
                     .mdi {
@@ -791,8 +805,8 @@
                 padding: 5px 15px 15px;
                 width: 100%;
                 justify-content: space-between;
-                
-                &>button {
+
+                & > button {
                     width: 50%;
                 }
 
@@ -815,7 +829,8 @@
                         float: none;
                     }
 
-                    .mdi, svg {
+                    .mdi,
+                    svg {
                         margin-right: 10px;
                     }
 
@@ -877,7 +892,7 @@
                         width: 100%;
                         display: block;
                         border-left: 5px solid transparent;
-                        transition: 0.4s;
+                        transition: border-left-color 0.4s;
 
                         &:first-of-type {
                             border-top: 1px solid #e6ecf0;
@@ -922,7 +937,7 @@
 
     @media screen and (max-width: 768px) {
         &.block-navbar {
-            .button.navbar-menu-button, 
+            .button.navbar-menu-button,
             .button.navbar-search-button {
                 padding: 10px 0px;
                 min-width: 60px;
