--- a/react/assets/forus-webshop/scss/_common/modals/modal-photo-cropper.scss
+++ b/react/assets/forus-webshop/scss/_common/modals/modal-photo-cropper.scss
@@ -111,8 +111,8 @@
                         background-color: #edeef0;
                         justify-content: center;
                         transition:
-                            0.4s background-color,
-                            0.4s color;
+                            .4s background-color,
+                            .4s color;
                         cursor: pointer;
 
                         .mdi {
@@ -154,7 +154,7 @@
                                 border-radius: 8px;
                                 display: flex;
                                 background-color: #d4d9dd;
-                                transition: background-color 0.4s;
+                                transition: background-color .4s;
                             }
 
                             &:hover {
@@ -195,8 +195,8 @@
                             color: #595959;
                             background-color: #ffffff;
                             transition:
-                                0.4s background-color,
-                                0.4s color;
+                                .4s background-color,
+                                .4s color;
                             font-size: 18px;
                             cursor: pointer;
 
