--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-push-notifications.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-push-notifications.scss
@@ -85,7 +85,7 @@
             top: 5px;
             font-size: 20px;
             color: #bcc1d3;
-            transition: 0.4s;
+            transition: color .4s;
             z-index: 1;
             width: 25px;
             height: 25px;
