--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-search-results.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-search-results.scss
@@ -8,12 +8,14 @@
     .search-item {
         position: relative;
         background: #ffffff;
-        box-shadow: var(--box-shadow);
-        border-radius: var(--border-radius);
         display: flex;
         flex-direction: row;
         transition: box-shadow 0.4s;
         width: 100%;
+        background: var(--showcase-item-background);
+        border-radius: var(--showcase-item-border-radius);
+        box-shadow: var(--showcase-item-shadow);
+        border: var(--showcase-item-border);
 
         .search-media {
             display: flex;
@@ -33,10 +35,13 @@
             }
 
             &:after {
-                content: "";
+                content: '';
                 background: #394260;
                 opacity: 0;
-                transition: 0.4s;
+                transition:
+                    color 0.4s,
+                    background-color 0.4s,
+                    opacity 0.4s;
                 width: 100%;
                 @include fill_parent();
             }
@@ -102,7 +107,6 @@
             .search-price {
                 font: 700 17px/30px var(--base-font);
                 position: relative;
-                width: 135px;
                 text-align: right;
                 width: 100%;
             }
@@ -114,7 +118,7 @@
         }
 
         &:hover {
-            box-shadow: 2px 5px 15px rgba($color: #000000, $alpha: 0.1);
+            box-shadow: var(--showcase-item-hover-shadow);
 
             .search-media {
                 &:after {
@@ -144,12 +148,12 @@
             padding: 0 10px;
             margin: 0 0 30px;
 
-            &:nth-child(3n+1) {
+            &:nth-child(3n + 1) {
                 padding-left: 0;
                 padding-right: 20px;
             }
 
-            &:nth-child(3n+3) {
+            &:nth-child(3n + 3) {
                 padding-right: 0;
                 padding-left: 20px;
             }
@@ -189,18 +193,18 @@
             }
         }
     }
-    
+
     @media screen and (max-width: 1200px) {
         &.block-search-results-grid {
             .search-wrapper {
                 flex-basis: 50%;
 
-                &:nth-child(2n+1) {
+                &:nth-child(2n + 1) {
                     padding-left: 0;
                     padding-right: 15px;
                 }
-    
-                &:nth-child(2n+2) {
+
+                &:nth-child(2n + 2) {
                     padding-right: 0;
                     padding-left: 15px;
                 }
@@ -279,8 +283,8 @@
         &.block-search-results-grid {
             .search-wrapper {
                 flex-basis: 100%;
-    
-                &:nth-child(1n+1) {
+
+                &:nth-child(1n + 1) {
                     padding-left: 0;
                     padding-right: 0;
                 }
