--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-sitemap.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-sitemap.scss
@@ -12,7 +12,7 @@
     a {
         color: #004D93;
         text-decoration: underline;
-        transition: color 0.4s;
+        transition: color .4s;
 
         &:hover {
             color: #349aff;
