--- a/react/assets/forus-webshop/scss/_common/sections/blocks/profile.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/profile.scss
@@ -75,7 +75,7 @@
                         float: left;
                         margin-right: 30px;
                         margin-bottom: 20px;
-                        transition: color 0.4s;
+                        transition: color .4s;
                         cursor: pointer;
                         @include cf();
 
@@ -117,7 +117,11 @@
                     margin-bottom: 15px;
                     display: block;
                     position: relative;
-                    transition: 0.4s;
+                    transition:
+                        color .4s,
+                        background .4s,
+                        box-shadow .4s,
+                        border .4s;
 
                     .mdi {
                         color: var(--profile-menu-item-color);
@@ -126,7 +130,7 @@
                         top: 50%;
                         transform: translate(0, -50%);
                         font-size: 20px;
-                        transition: 0.4s;
+                        transition: color .4s;
                     }
 
                     &.active,
