--- a/react/assets/forus-webshop/scss/geertruidenberg/includes/shame.scss
+++ b/react/assets/forus-webshop/scss/geertruidenberg/includes/shame.scss
@@ -22,15 +22,10 @@
             justify-content: center;
 
             &:before {
-                content: "";
+                content: '';
                 width: 100%;
                 height: 80px;
-                @if ($buildReact) {
-                    background: url(./assets/img/header-frame-after.svg);
-                } @else {
-                    background: url(../img/header-frame-after.svg);
-                }
-                background-color: #69c;
+                background: #69c url(./assets/img/header-frame-after.svg);
                 bottom: 0;
                 position: absolute;
             }
@@ -46,12 +41,7 @@
 // Footer
 .section {
     &.section-footer {
-        @if ($buildReact) {
-            background: url(./assets/img/header-frame-after.svg);
-        } @else {
-            background: url(../img/header-frame-after.svg);
-        }
-        background-color: #ee8016;
+        background: #ee8016 url(./assets/img/header-frame-after.svg);
         padding: 50px 0 0;
         margin-top: 0;
         color: var(--footer_color);
