fix signup bar color

--- a/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
@@ -160,7 +160,7 @@ $primaryColorLight: #305dfb;
     --label-set-focus-border-color: #9e9e9e;
 
     // Sign up
-    --sign_up_accent_color: #305dfb;
+    --sign_up_accent_color: #282b39;
     --sign_up_accent_color_light: #bdcbff;
     --sign_up_link_color: #e60003;
     --sign_up_step_btns_color: #305dfb;
