--- a/react/assets/forus-platform/scss/_common/blocks/block-label-tabs.scss
+++ b/react/assets/forus-platform/scss/_common/blocks/block-label-tabs.scss
@@ -1,7 +1,8 @@
-&.block-label-tabs {
+.block.block-label-tabs {
     display: flex;
     margin-left: 10px;
     border-radius: var(--border-radius);
+    white-space: nowrap;
 
     .label-tab {
         background: #fff;
@@ -10,7 +11,11 @@
         font: 500 13px/20px var(--base-font);
         color: #2f2e43;
         padding: 5px 10px;
-        transition: color 0.4s, border-color 0.4s, background-color 0.4s, box-shadow 0.4s;
+        transition:
+            color 0.4s,
+            border-color 0.4s,
+            background-color 0.4s,
+            box-shadow 0.4s;
         cursor: pointer;
         outline: none;
         border-radius: 0;
@@ -32,30 +37,6 @@
 
         .label-tab-icon-end {
             margin-left: 4px;
-        }
-
-        .label-tab-dropdown {
-            z-index: 10;
-            position: absolute;
-            top: 100%;
-            margin-top: 6px;
-            left: 0;
-            cursor: default;
-
-            &:before {
-                content: '';
-                display: block;
-                left: 0;
-                bottom: 100%;
-                height: 6px;
-                width: 100%;
-                position: absolute;
-            }
-
-            &.label-tab-dropdown-right {
-                right: 0;
-                left: auto;
-            }
         }
 
         &:first-child {
@@ -116,6 +97,11 @@
         &.active {
             background: var(--color-primary);
             border-color: var(--color-primary);
+            color: #fff;
+
+            .mdi {
+                color: #fff;
+            }
 
             .label-tab-dropdown,
             .label-tab-dropdown .mdi {
@@ -127,12 +113,9 @@
             cursor: default;
             pointer-events: none;
         }
-
-        @include visible_on_hover('.label-tab-dropdown');
-        @include visible_on_toggle('.label-tab-dropdown', '.active');
     }
 
-    .label-tab-group {
+    .label-tab-set {
         margin-right: 10px;
         display: flex;
         border-radius: inherit;
@@ -140,52 +123,9 @@
         &:last-child {
             margin-right: 0;
         }
-
-        &.label-tab-group-borderless {
-            .label-tab {
-                &:hover {
-                    box-shadow: none;
-                }
-
-                &:not(:last-child) {
-                    border-right: none;
-                }
-
-                &:not(:first-child) {
-                    border-left: none;
-                }
-            }
-        }
-
-        &.label-tab-group-shadowless {
-            box-shadow: none;
-        }
     }
 
     &:first-child {
         margin-left: 0;
-    }
-
-    &.block-label-tabs-variant {
-        .label-tab-group {
-            box-shadow: 2px 2px 3px rgba(#000000, 0.1);
-            border-color: var(--border-color);
-
-            .label-tab {
-                border-color: var(--border-color);
-                color: #45535e;
-                font-weight: 600;
-
-                &.active,
-                &:hover {
-                    color: var(--color-primary-light);
-                    background-color: #fff;
-                }
-            }
-
-            &.label-tab-group-shadowless {
-                box-shadow: none;
-            }
-        }
     }
 }
