--- a/react/assets/forus-webshop/scss/_common/includes/common.scss
+++ b/react/assets/forus-webshop/scss/_common/includes/common.scss
@@ -116,6 +116,10 @@ img {
     color: var(--color-primary-light) !important;
 }
 
+.text-inherit {
+    font: inherit !important;
+}
+
 .text-danger {
     color: #ad0003 !important;
 }
