profiles minor visual and consistency fixes

--- a/react/assets/forus-webshop/scss/_common/components/card.scss
+++ b/react/assets/forus-webshop/scss/_common/components/card.scss
@@ -284,7 +284,7 @@
     }
 
     @media screen and (max-width: 1000px) {
-        .card-head {
+        .card-header {
             padding: 15px 20px;
         }
 
